--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
