--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
