--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.8.0",
     "lucide": "^0.446.0",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
